// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Elements/CustomElementModal with description 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasCustomElementModal"
      description="best element ever"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "700px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <div
          aria-hidden="true"
          className="euiButtonIcon__icon"
          data-euiicon-type="cross"
          size="m"
        />
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader"
        >
          <div
            className="euiModalHeader__title"
          >
            <h3>
              Edit custom element
            </h3>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow2 canvasCustomElementForm"
              >
                <div
                  className="euiFormRow euiFormRow--compressed"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <div
                      className="euiFormControlLayout"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <input
                          aria-describedby="generated-id-help"
                          className="euiFieldText canvasCustomElementForm__name"
                          data-test-subj="canvasCustomElementForm-name"
                          id="generated-id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          required={true}
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      40 characters remaining
                    </div>
                  </div>
                </div>
                <div
                  className="euiFormRow"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Description
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <textarea
                      aria-describedby="generated-id-help"
                      className="euiTextArea euiTextArea--resizeVertical"
                      data-test-subj="canvasCustomElementForm-description"
                      id="generated-id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      rows={2}
                      value="best element ever"
                    />
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      83 characters remaining
                    </div>
                  </div>
                </div>
                <div
                  className="euiFormRow euiFormRow--compressed canvasCustomElementForm__thumbnail"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Thumbnail image
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <div
                      className="euiFilePicker euiFilePicker--large canvasImageUpload"
                    >
                      <div
                        className="euiFilePicker__wrap"
                      >
                        <input
                          accept="image/*"
                          aria-describedby="generated-id-filePicker__prompt"
                          className="euiFilePicker__input"
                          id="generated-id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onDragLeave={[Function]}
                          onDragOver={[Function]}
                          onDrop={[Function]}
                          onFocus={[Function]}
                          type="file"
                        />
                        <div
                          className="euiFilePicker__prompt"
                          id="generated-id-filePicker__prompt"
                        >
                          <div
                            aria-hidden="true"
                            className="euiFilePicker__icon"
                            data-euiicon-type="importAction"
                            size="l"
                          />
                          <div
                            className="euiFilePicker__promptText"
                          >
                            Select or drag and drop an image
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="euiText euiText--extraSmall canvasCustomElementForm__thumbnailHelp"
                >
                  <p>
                    Take a screenshot of your element and upload it here. This can also be done after saving.
                  </p>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1 canvasElementCard__wrapper canvasCustomElementForm__preview"
              >
                <h4
                  className="euiTitle euiTitle--xxxsmall"
                >
                  Element preview
                </h4>
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <div
                  className="euiCard euiCard--leftAligned euiCard--hasIcon canvasElementCard canvasElementCard--hasIcon"
                  onClick={[Function]}
                >
                  <div
                    className="euiCard__top"
                  >
                    <div
                      className="euiCard__icon"
                      data-euiicon-type="canvasApp"
                      size="xxl"
                    />
                  </div>
                  <div
                    className="euiCard__content"
                  >
                    <span
                      className="euiTitle euiTitle--small euiCard__title"
                      id="generated-idTitle"
                    >
                      
                    </span>
                    <div
                      className="euiText euiText--small euiCard__description"
                      id="generated-idDescription"
                    >
                      <p>
                        best element ever
                      </p>
                    </div>
                  </div>
                  <div
                    className="euiCard__footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButton euiButton--primary euiButton--fill"
                data-test-subj="canvasCustomElementForm-submit"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Save
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`Storyshots components/Elements/CustomElementModal with image 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasCustomElementModal"
      image="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiCiAgIHhtbG5zOnN2Zz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIKICAgdmlld0JveD0iMCAwIDI3MC42MDAwMSAyNjkuNTQ2NjYiCiAgIGhlaWdodD0iMjY5LjU0NjY2IgogICB3aWR0aD0iMjcwLjYwMDAxIgogICB4bWw6c3BhY2U9InByZXNlcnZlIgogICBpZD0ic3ZnMiIKICAgdmVyc2lvbj0iMS4xIj48bWV0YWRhdGEKICAgICBpZD0ibWV0YWRhdGE4Ij48cmRmOlJERj48Y2M6V29yawogICAgICAgICByZGY6YWJvdXQ9IiI+PGRjOmZvcm1hdD5pbWFnZS9zdmcreG1sPC9kYzpmb3JtYXQ+PGRjOnR5cGUKICAgICAgICAgICByZGY6cmVzb3VyY2U9Imh0dHA6Ly9wdXJsLm9yZy9kYy9kY21pdHlwZS9TdGlsbEltYWdlIiAvPjwvY2M6V29yaz48L3JkZjpSREY+PC9tZXRhZGF0YT48ZGVmcwogICAgIGlkPSJkZWZzNiIgLz48ZwogICAgIHRyYW5zZm9ybT0ibWF0cml4KDEuMzMzMzMzMywwLDAsLTEuMzMzMzMzMywwLDI2OS41NDY2NykiCiAgICAgaWQ9ImcxMCI+PGcKICAgICAgIHRyYW5zZm9ybT0ic2NhbGUoMC4xKSIKICAgICAgIGlkPSJnMTIiPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMTQiCiAgICAgICAgIHN0eWxlPSJmaWxsOiNmZmZmZmY7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMjAyOS40OCw5NjIuNDQxIGMgMCwxNzAuMDk5IC0xMDUuNDYsMzE4Ljc5OSAtMjY0LjE3LDM3Ni42NTkgNi45OCwzNS44NiAxMC42Miw3MS43MSAxMC42MiwxMDkuMDUgMCwzMTYuMTkgLTI1Ny4yNCw1NzMuNDMgLTU3My40Nyw1NzMuNDMgLTE4NC43MiwwIC0zNTYuNTU4LC04OC41OSAtNDY0LjUzLC0yMzcuODUgLTUzLjA5LDQxLjE4IC0xMTguMjg1LDYzLjc1IC0xODYuMzA1LDYzLjc1IC0xNjcuODM2LDAgLTMwNC4zODMsLTEzNi41NCAtMzA0LjM4MywtMzA0LjM4IDAsLTM3LjA4IDYuNjE3LC03Mi41OCAxOS4wMzEsLTEwNi4wOCBDIDEwOC40ODgsMTM4MC4wOSAwLDEyMjcuODkgMCwxMDU4Ljg4IDAsODg3LjkxIDEwNS45NzcsNzM4LjUzOSAyNjUuMzk4LDY4MS4wOSBjIC02Ljc2OSwtMzUuNDQyIC0xMC40NiwtNzIuMDIgLTEwLjQ2LC0xMDkgQyAyNTQuOTM4LDI1Ni42MjEgNTExLjU2NiwwIDgyNy4wMjcsMCAxMDEyLjIsMCAxMTgzLjk0LDg4Ljk0MTQgMTI5MS4zLDIzOC44MzIgYyA1My40NSwtNDEuOTYxIDExOC44LC02NC45OTIgMTg2LjU2LC02NC45OTIgMTY3LjgzLDAgMzA0LjM4LDEzNi40OTIgMzA0LjM4LDMwNC4zMzIgMCwzNy4wNzggLTYuNjIsNzIuNjI5IC0xOS4wMywxMDYuMTI5IDE1Ny43OCw1Ni44NzkgMjY2LjI3LDIwOS4xMjkgMjY2LjI3LDM3OC4xNCIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDE2IgogICAgICAgICBzdHlsZT0iZmlsbDojZmFjZjA5O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJtIDc5Ny44OTgsMTE1MC45MyA0NDQuMDcyLC0yMDIuNDUgNDQ4LjA1LDM5Mi41OCBjIDYuNDksMzIuMzkgOS42Niw2NC42NyA5LjY2LDk4LjQ2IDAsMjc2LjIzIC0yMjQuNjgsNTAwLjk1IC01MDAuOSw1MDAuOTUgLTE2NS4yNCwwIC0zMTkuMzcsLTgxLjM2IC00MTMuMDUzLC0yMTcuNzkgbCAtNzQuNTI0LC0zODYuNjQgODYuNjk1LC0xODUuMTEiIC8+PHBhdGgKICAgICAgICAgaWQ9InBhdGgxOCIKICAgICAgICAgc3R5bGU9ImZpbGw6IzQ5YzFhZTtmaWxsLW9wYWNpdHk6MTtmaWxsLXJ1bGU6bm9uemVybztzdHJva2U6bm9uZSIKICAgICAgICAgZD0ibSAzMzguMjIzLDY4MC42NzIgYyAtNi40ODksLTMyLjM4MyAtOS44MDksLTY1Ljk4MSAtOS44MDksLTk5Ljk3MyAwLC0yNzYuOTI5IDIyNS4zMzYsLTUwMi4yNTc2IDUwMi4zMTMsLTUwMi4yNTc2IDE2Ni41OTMsMCAzMjEuNDczLDgyLjExNzYgNDE1LjAxMywyMTkuOTQ5NiBsIDczLjk3LDM4NS4zNDcgLTk4LjcyLDE4OC42MjEgTCA3NzUuMTU2LDEwNzUuNTcgMzM4LjIyMyw2ODAuNjcyIiAvPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMjAiCiAgICAgICAgIHN0eWxlPSJmaWxsOiNlZjI5OWI7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMzM1LjQxLDE0NDkuMTggMzA0LjMzMiwtNzEuODYgNjYuNjgsMzQ2LjAyIGMgLTQxLjU4NiwzMS43OCAtOTIuOTMsNDkuMTggLTE0NS43MzEsNDkuMTggLTEzMi4yNSwwIC0yMzkuODEyLC0xMDcuNjEgLTIzOS44MTIsLTIzOS44NyAwLC0yOS4yMSA0Ljg3OSwtNTcuMjIgMTQuNTMxLC04My40NyIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDIyIgogICAgICAgICBzdHlsZT0iZmlsbDojNGNhYmU0O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJNIDMwOC45OTIsMTM3Ni43IEMgMTczLjAyLDEzMzEuNjQgNzguNDgwNSwxMjAxLjMgNzguNDgwNSwxMDU3LjkzIDc4LjQ4MDUsOTE4LjM0IDE2NC44Miw3OTMuNjggMjk0LjQwNiw3NDQuMzUyIGwgNDI2Ljk4MSwzODUuOTM4IC03OC4zOTUsMTY3LjUxIC0zMzQsNzguOSIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDI0IgogICAgICAgICBzdHlsZT0iZmlsbDojODVjZTI2O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJtIDEzMjMuOCwyOTguNDEgYyA0MS43NCwtMzIuMDkgOTIuODMsLTQ5LjU5IDE0NC45OCwtNDkuNTkgMTMyLjI1LDAgMjM5LjgxLDEwNy41NTkgMjM5LjgxLDIzOS44MjEgMCwyOS4xNiAtNC44OCw1Ny4xNjggLTE0LjUzLDgzLjQxOCBsIC0zMDQuMDgsNzEuMTYgLTY2LjE4LC0zNDQuODA5IiAvPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMjYiCiAgICAgICAgIHN0eWxlPSJmaWxsOiMzMTc3YTc7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMTM4NS42Nyw3MjIuOTMgMzM0Ljc2LC03OC4zMDEgYyAxMzYuMDIsNDQuOTYxIDIzMC41NiwxNzUuMzUxIDIzMC41NiwzMTguNzYyIDAsMTM5LjMzOSAtODYuNTQsMjYzLjg1OSAtMjE2LjM4LDMxMy4wMzkgbCAtNDM3Ljg0LC0zODMuNTkgODguOSwtMTY5LjkxIiAvPjwvZz48L2c+PC9zdmc+"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "700px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <div
          aria-hidden="true"
          className="euiButtonIcon__icon"
          data-euiicon-type="cross"
          size="m"
        />
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader"
        >
          <div
            className="euiModalHeader__title"
          >
            <h3>
              Edit custom element
            </h3>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow2 canvasCustomElementForm"
              >
                <div
                  className="euiFormRow euiFormRow--compressed"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <div
                      className="euiFormControlLayout"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <input
                          aria-describedby="generated-id-help"
                          className="euiFieldText canvasCustomElementForm__name"
                          data-test-subj="canvasCustomElementForm-name"
                          id="generated-id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          required={true}
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      40 characters remaining
                    </div>
                  </div>
                </div>
                <div
                  className="euiFormRow"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Description
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <textarea
                      aria-describedby="generated-id-help"
                      className="euiTextArea euiTextArea--resizeVertical"
                      data-test-subj="canvasCustomElementForm-description"
                      id="generated-id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      rows={2}
                      value=""
                    />
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      100 characters remaining
                    </div>
                  </div>
                </div>
                <div
                  className="euiFormRow euiFormRow--compressed canvasCustomElementForm__thumbnail"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Thumbnail image
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <div
                      className="euiFilePicker euiFilePicker--large canvasImageUpload"
                    >
                      <div
                        className="euiFilePicker__wrap"
                      >
                        <input
                          accept="image/*"
                          aria-describedby="generated-id-filePicker__prompt"
                          className="euiFilePicker__input"
                          id="generated-id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onDragLeave={[Function]}
                          onDragOver={[Function]}
                          onDrop={[Function]}
                          onFocus={[Function]}
                          type="file"
                        />
                        <div
                          className="euiFilePicker__prompt"
                          id="generated-id-filePicker__prompt"
                        >
                          <div
                            aria-hidden="true"
                            className="euiFilePicker__icon"
                            data-euiicon-type="importAction"
                            size="l"
                          />
                          <div
                            className="euiFilePicker__promptText"
                          >
                            Select or drag and drop an image
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="euiText euiText--extraSmall canvasCustomElementForm__thumbnailHelp"
                >
                  <p>
                    Take a screenshot of your element and upload it here. This can also be done after saving.
                  </p>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1 canvasElementCard__wrapper canvasCustomElementForm__preview"
              >
                <h4
                  className="euiTitle euiTitle--xxxsmall"
                >
                  Element preview
                </h4>
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <div
                  className="euiCard euiCard--leftAligned canvasElementCard"
                  onClick={[Function]}
                >
                  <div
                    className="euiCard__top"
                  >
                    <div
                      className="euiCard__image"
                    >
                      <img
                        alt=""
                        src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiCiAgIHhtbG5zOnN2Zz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIKICAgdmlld0JveD0iMCAwIDI3MC42MDAwMSAyNjkuNTQ2NjYiCiAgIGhlaWdodD0iMjY5LjU0NjY2IgogICB3aWR0aD0iMjcwLjYwMDAxIgogICB4bWw6c3BhY2U9InByZXNlcnZlIgogICBpZD0ic3ZnMiIKICAgdmVyc2lvbj0iMS4xIj48bWV0YWRhdGEKICAgICBpZD0ibWV0YWRhdGE4Ij48cmRmOlJERj48Y2M6V29yawogICAgICAgICByZGY6YWJvdXQ9IiI+PGRjOmZvcm1hdD5pbWFnZS9zdmcreG1sPC9kYzpmb3JtYXQ+PGRjOnR5cGUKICAgICAgICAgICByZGY6cmVzb3VyY2U9Imh0dHA6Ly9wdXJsLm9yZy9kYy9kY21pdHlwZS9TdGlsbEltYWdlIiAvPjwvY2M6V29yaz48L3JkZjpSREY+PC9tZXRhZGF0YT48ZGVmcwogICAgIGlkPSJkZWZzNiIgLz48ZwogICAgIHRyYW5zZm9ybT0ibWF0cml4KDEuMzMzMzMzMywwLDAsLTEuMzMzMzMzMywwLDI2OS41NDY2NykiCiAgICAgaWQ9ImcxMCI+PGcKICAgICAgIHRyYW5zZm9ybT0ic2NhbGUoMC4xKSIKICAgICAgIGlkPSJnMTIiPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMTQiCiAgICAgICAgIHN0eWxlPSJmaWxsOiNmZmZmZmY7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMjAyOS40OCw5NjIuNDQxIGMgMCwxNzAuMDk5IC0xMDUuNDYsMzE4Ljc5OSAtMjY0LjE3LDM3Ni42NTkgNi45OCwzNS44NiAxMC42Miw3MS43MSAxMC42MiwxMDkuMDUgMCwzMTYuMTkgLTI1Ny4yNCw1NzMuNDMgLTU3My40Nyw1NzMuNDMgLTE4NC43MiwwIC0zNTYuNTU4LC04OC41OSAtNDY0LjUzLC0yMzcuODUgLTUzLjA5LDQxLjE4IC0xMTguMjg1LDYzLjc1IC0xODYuMzA1LDYzLjc1IC0xNjcuODM2LDAgLTMwNC4zODMsLTEzNi41NCAtMzA0LjM4MywtMzA0LjM4IDAsLTM3LjA4IDYuNjE3LC03Mi41OCAxOS4wMzEsLTEwNi4wOCBDIDEwOC40ODgsMTM4MC4wOSAwLDEyMjcuODkgMCwxMDU4Ljg4IDAsODg3LjkxIDEwNS45NzcsNzM4LjUzOSAyNjUuMzk4LDY4MS4wOSBjIC02Ljc2OSwtMzUuNDQyIC0xMC40NiwtNzIuMDIgLTEwLjQ2LC0xMDkgQyAyNTQuOTM4LDI1Ni42MjEgNTExLjU2NiwwIDgyNy4wMjcsMCAxMDEyLjIsMCAxMTgzLjk0LDg4Ljk0MTQgMTI5MS4zLDIzOC44MzIgYyA1My40NSwtNDEuOTYxIDExOC44LC02NC45OTIgMTg2LjU2LC02NC45OTIgMTY3LjgzLDAgMzA0LjM4LDEzNi40OTIgMzA0LjM4LDMwNC4zMzIgMCwzNy4wNzggLTYuNjIsNzIuNjI5IC0xOS4wMywxMDYuMTI5IDE1Ny43OCw1Ni44NzkgMjY2LjI3LDIwOS4xMjkgMjY2LjI3LDM3OC4xNCIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDE2IgogICAgICAgICBzdHlsZT0iZmlsbDojZmFjZjA5O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJtIDc5Ny44OTgsMTE1MC45MyA0NDQuMDcyLC0yMDIuNDUgNDQ4LjA1LDM5Mi41OCBjIDYuNDksMzIuMzkgOS42Niw2NC42NyA5LjY2LDk4LjQ2IDAsMjc2LjIzIC0yMjQuNjgsNTAwLjk1IC01MDAuOSw1MDAuOTUgLTE2NS4yNCwwIC0zMTkuMzcsLTgxLjM2IC00MTMuMDUzLC0yMTcuNzkgbCAtNzQuNTI0LC0zODYuNjQgODYuNjk1LC0xODUuMTEiIC8+PHBhdGgKICAgICAgICAgaWQ9InBhdGgxOCIKICAgICAgICAgc3R5bGU9ImZpbGw6IzQ5YzFhZTtmaWxsLW9wYWNpdHk6MTtmaWxsLXJ1bGU6bm9uemVybztzdHJva2U6bm9uZSIKICAgICAgICAgZD0ibSAzMzguMjIzLDY4MC42NzIgYyAtNi40ODksLTMyLjM4MyAtOS44MDksLTY1Ljk4MSAtOS44MDksLTk5Ljk3MyAwLC0yNzYuOTI5IDIyNS4zMzYsLTUwMi4yNTc2IDUwMi4zMTMsLTUwMi4yNTc2IDE2Ni41OTMsMCAzMjEuNDczLDgyLjExNzYgNDE1LjAxMywyMTkuOTQ5NiBsIDczLjk3LDM4NS4zNDcgLTk4LjcyLDE4OC42MjEgTCA3NzUuMTU2LDEwNzUuNTcgMzM4LjIyMyw2ODAuNjcyIiAvPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMjAiCiAgICAgICAgIHN0eWxlPSJmaWxsOiNlZjI5OWI7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMzM1LjQxLDE0NDkuMTggMzA0LjMzMiwtNzEuODYgNjYuNjgsMzQ2LjAyIGMgLTQxLjU4NiwzMS43OCAtOTIuOTMsNDkuMTggLTE0NS43MzEsNDkuMTggLTEzMi4yNSwwIC0yMzkuODEyLC0xMDcuNjEgLTIzOS44MTIsLTIzOS44NyAwLC0yOS4yMSA0Ljg3OSwtNTcuMjIgMTQuNTMxLC04My40NyIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDIyIgogICAgICAgICBzdHlsZT0iZmlsbDojNGNhYmU0O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJNIDMwOC45OTIsMTM3Ni43IEMgMTczLjAyLDEzMzEuNjQgNzguNDgwNSwxMjAxLjMgNzguNDgwNSwxMDU3LjkzIDc4LjQ4MDUsOTE4LjM0IDE2NC44Miw3OTMuNjggMjk0LjQwNiw3NDQuMzUyIGwgNDI2Ljk4MSwzODUuOTM4IC03OC4zOTUsMTY3LjUxIC0zMzQsNzguOSIgLz48cGF0aAogICAgICAgICBpZD0icGF0aDI0IgogICAgICAgICBzdHlsZT0iZmlsbDojODVjZTI2O2ZpbGwtb3BhY2l0eToxO2ZpbGwtcnVsZTpub256ZXJvO3N0cm9rZTpub25lIgogICAgICAgICBkPSJtIDEzMjMuOCwyOTguNDEgYyA0MS43NCwtMzIuMDkgOTIuODMsLTQ5LjU5IDE0NC45OCwtNDkuNTkgMTMyLjI1LDAgMjM5LjgxLDEwNy41NTkgMjM5LjgxLDIzOS44MjEgMCwyOS4xNiAtNC44OCw1Ny4xNjggLTE0LjUzLDgzLjQxOCBsIC0zMDQuMDgsNzEuMTYgLTY2LjE4LC0zNDQuODA5IiAvPjxwYXRoCiAgICAgICAgIGlkPSJwYXRoMjYiCiAgICAgICAgIHN0eWxlPSJmaWxsOiMzMTc3YTc7ZmlsbC1vcGFjaXR5OjE7ZmlsbC1ydWxlOm5vbnplcm87c3Ryb2tlOm5vbmUiCiAgICAgICAgIGQ9Im0gMTM4NS42Nyw3MjIuOTMgMzM0Ljc2LC03OC4zMDEgYyAxMzYuMDIsNDQuOTYxIDIzMC41NiwxNzUuMzUxIDIzMC41NiwzMTguNzYyIDAsMTM5LjMzOSAtODYuNTQsMjYzLjg1OSAtMjE2LjM4LDMxMy4wMzkgbCAtNDM3Ljg0LC0zODMuNTkgODguOSwtMTY5LjkxIiAvPjwvZz48L2c+PC9zdmc+"
                      />
                    </div>
                  </div>
                  <div
                    className="euiCard__content"
                  >
                    <span
                      className="euiTitle euiTitle--small euiCard__title"
                      id="generated-idTitle"
                    >
                      
                    </span>
                    <div
                      className="euiText euiText--small euiCard__description"
                      id="generated-idDescription"
                    >
                      <p>
                        
                      </p>
                    </div>
                  </div>
                  <div
                    className="euiCard__footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButton euiButton--primary euiButton--fill"
                data-test-subj="canvasCustomElementForm-submit"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Save
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`Storyshots components/Elements/CustomElementModal with name 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasCustomElementModal"
      description=""
      name="My Chart"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "700px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <div
          aria-hidden="true"
          className="euiButtonIcon__icon"
          data-euiicon-type="cross"
          size="m"
        />
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader"
        >
          <div
            className="euiModalHeader__title"
          >
            <h3>
              Edit custom element
            </h3>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow2 canvasCustomElementForm"
              >
                <div
                  className="euiFormRow euiFormRow--compressed"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <div
                      className="euiFormControlLayout"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <input
                          aria-describedby="generated-id-help"
                          className="euiFieldText canvasCustomElementForm__name"
                          data-test-subj="canvasCustomElementForm-name"
                          id="generated-id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          required={true}
                          type="text"
                          value="My Chart"
                        />
                      </div>
                    </div>
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      32 characters remaining
                    </div>
                  </div>
                </div>
                <div
                  className="euiFormRow"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Description
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <textarea
                      aria-describedby="generated-id-help"
                      className="euiTextArea euiTextArea--resizeVertical"
                      data-test-subj="canvasCustomElementForm-description"
                      id="generated-id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      rows={2}
                      value=""
                    />
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      100 characters remaining
                    </div>
                  </div>
                </div>
                <div
                  className="euiFormRow euiFormRow--compressed canvasCustomElementForm__thumbnail"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Thumbnail image
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <div
                      className="euiFilePicker euiFilePicker--large canvasImageUpload"
                    >
                      <div
                        className="euiFilePicker__wrap"
                      >
                        <input
                          accept="image/*"
                          aria-describedby="generated-id-filePicker__prompt"
                          className="euiFilePicker__input"
                          id="generated-id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onDragLeave={[Function]}
                          onDragOver={[Function]}
                          onDrop={[Function]}
                          onFocus={[Function]}
                          type="file"
                        />
                        <div
                          className="euiFilePicker__prompt"
                          id="generated-id-filePicker__prompt"
                        >
                          <div
                            aria-hidden="true"
                            className="euiFilePicker__icon"
                            data-euiicon-type="importAction"
                            size="l"
                          />
                          <div
                            className="euiFilePicker__promptText"
                          >
                            Select or drag and drop an image
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="euiText euiText--extraSmall canvasCustomElementForm__thumbnailHelp"
                >
                  <p>
                    Take a screenshot of your element and upload it here. This can also be done after saving.
                  </p>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1 canvasElementCard__wrapper canvasCustomElementForm__preview"
              >
                <h4
                  className="euiTitle euiTitle--xxxsmall"
                >
                  Element preview
                </h4>
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <div
                  className="euiCard euiCard--leftAligned euiCard--hasIcon canvasElementCard canvasElementCard--hasIcon"
                  onClick={[Function]}
                >
                  <div
                    className="euiCard__top"
                  >
                    <div
                      className="euiCard__icon"
                      data-euiicon-type="canvasApp"
                      size="xxl"
                    />
                  </div>
                  <div
                    className="euiCard__content"
                  >
                    <span
                      className="euiTitle euiTitle--small euiCard__title"
                      id="generated-idTitle"
                    >
                      My Chart
                    </span>
                    <div
                      className="euiText euiText--small euiCard__description"
                      id="generated-idDescription"
                    >
                      <p>
                        
                      </p>
                    </div>
                  </div>
                  <div
                    className="euiCard__footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButton euiButton--primary euiButton--fill"
                data-test-subj="canvasCustomElementForm-submit"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Save
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`Storyshots components/Elements/CustomElementModal with title 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasCustomElementModal"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "700px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <div
          aria-hidden="true"
          className="euiButtonIcon__icon"
          data-euiicon-type="cross"
          size="m"
        />
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader"
        >
          <div
            className="euiModalHeader__title"
          >
            <h3>
              Create new element
            </h3>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow2 canvasCustomElementForm"
              >
                <div
                  className="euiFormRow euiFormRow--compressed"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Name
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <div
                      className="euiFormControlLayout"
                    >
                      <div
                        className="euiFormControlLayout__childrenWrapper"
                      >
                        <input
                          aria-describedby="generated-id-help"
                          className="euiFieldText canvasCustomElementForm__name"
                          data-test-subj="canvasCustomElementForm-name"
                          id="generated-id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          required={true}
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      40 characters remaining
                    </div>
                  </div>
                </div>
                <div
                  className="euiFormRow"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Description
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <textarea
                      aria-describedby="generated-id-help"
                      className="euiTextArea euiTextArea--resizeVertical"
                      data-test-subj="canvasCustomElementForm-description"
                      id="generated-id"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      rows={2}
                      value=""
                    />
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      100 characters remaining
                    </div>
                  </div>
                </div>
                <div
                  className="euiFormRow euiFormRow--compressed canvasCustomElementForm__thumbnail"
                  id="generated-id-row"
                >
                  <div
                    className="euiFormRow__labelWrapper"
                  >
                    <label
                      className="euiFormLabel euiFormRow__label"
                      htmlFor="generated-id"
                    >
                      Thumbnail image
                    </label>
                  </div>
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <div
                      className="euiFilePicker euiFilePicker--large canvasImageUpload"
                    >
                      <div
                        className="euiFilePicker__wrap"
                      >
                        <input
                          accept="image/*"
                          aria-describedby="generated-id-filePicker__prompt"
                          className="euiFilePicker__input"
                          id="generated-id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onDragLeave={[Function]}
                          onDragOver={[Function]}
                          onDrop={[Function]}
                          onFocus={[Function]}
                          type="file"
                        />
                        <div
                          className="euiFilePicker__prompt"
                          id="generated-id-filePicker__prompt"
                        >
                          <div
                            aria-hidden="true"
                            className="euiFilePicker__icon"
                            data-euiicon-type="importAction"
                            size="l"
                          />
                          <div
                            className="euiFilePicker__promptText"
                          >
                            Select or drag and drop an image
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="euiText euiText--extraSmall canvasCustomElementForm__thumbnailHelp"
                >
                  <p>
                    Take a screenshot of your element and upload it here. This can also be done after saving.
                  </p>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1 canvasElementCard__wrapper canvasCustomElementForm__preview"
              >
                <h4
                  className="euiTitle euiTitle--xxxsmall"
                >
                  Element preview
                </h4>
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <div
                  className="euiCard euiCard--leftAligned euiCard--hasIcon canvasElementCard canvasElementCard--hasIcon"
                  onClick={[Function]}
                >
                  <div
                    className="euiCard__top"
                  >
                    <div
                      className="euiCard__icon"
                      data-euiicon-type="canvasApp"
                      size="xxl"
                    />
                  </div>
                  <div
                    className="euiCard__content"
                  >
                    <span
                      className="euiTitle euiTitle--small euiCard__title"
                      id="generated-idTitle"
                    >
                      
                    </span>
                    <div
                      className="euiText euiText--small euiCard__description"
                      id="generated-idDescription"
                    >
                      <p>
                        
                      </p>
                    </div>
                  </div>
                  <div
                    className="euiCard__footer"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                className="euiButton euiButton--primary euiButton--fill"
                data-test-subj="canvasCustomElementForm-submit"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButton__content"
                >
                  <span
                    className="euiButton__text"
                  >
                    Save
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;
